===========
PyObjC NEWS
===========

An overview of the relevant changes in new, and older, releases.

Version 2.4  (or 3.0)
---------------------

- Workaround for bug in pip that resulted in pyobjc-core not being pip
  installable.  Patch by Marc Abramowitz.

- Creating new formal protocols now uses the new runtime API that was
  introduced in OSX 10.7. Because of this it is now possible to create
  new formal protocols in 64-bit code (when running on OSX 10.7 or later)

- Codebase should work again when Python using ``--enable-unicode=ucs4``.

- BUG: Avoid crashes in calculating with NSDecimal values in Python 3

- Implement '//' operator for NSDecimal and NSDecimalNumber. 

- Implement support for the ``round`` builtin in NSDecimal and
  NSDecimalNumber

- There is now limited support for packed struct definitions. This 
  requires that the struct is wrapped using ``objc.createStructType``.

  Struct packing is not described in the encoding string for a 
  structure, which is why special support is needed.

- objc.registerStructAlias now returns the alias type instead of ``None``

- In Python 3.x there is a new way to explicitly specify which (informal)
  protocols a class conforms to::

     class MyClass (NSObject, protocols=[Protocol1, Protocol2]):
        pass

  Python 2.x does not support this syntax, you can still use the
  following code there::

     class MyClass (NSObject, Protocol1, Protocol2):
        pass

  Note: The Python 2.x style works upto Python 3.2. In Python 3.3 and later
  the Python 2.x style declaration no longer works due to changes in the
  language.

- It is also possible to specify the protocols that a class conforms to using
  a "__pyobjc_protocols__" attribute in the class body.  This has the same
  interface as the "protocols" keyword argument in Python 3.x.

  This is primarily meant to be used by code that needs to work in Python 2 
  as well as Python 3.
